<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="60dp"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                     android:id="@+id/btModifC"
                     android:drawableTop="@mipmap/cuidador_menu50b"
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_marginTop="30dp"
                     android:drawablePadding="-10dp"
                     android:background="@drawable/selector"
                     android:text="@string/btModifDades"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_centerHorizontal="true" />

                 <Button
                     android:id="@+id/btConsultaP"
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:drawablePadding="-10dp"
                     android:drawableTop="@mipmap/pacient50b"
                     android:background="@drawable/selector"
                     android:text="@string/btConsultaP"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_below="@+id/btModifC"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="10dp" />
            <Button
                android:id="@+id/btConsultaV"
                android:layout_width="160dp"
                android:layout_height="110dp"
                android:drawablePadding="-10dp"
                android:drawableTop="@mipmap/librovisitas50b"
                android:background="@drawable/selector"
                android:text="@string/mn_Calendari"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@+id/btConsultaP"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>