<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TilDniC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="35dp">

                <EditText
                    android:id="@+id/dniC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"
                    android:hint="@string/dni"
                    android:maxLength="9"
                    android:inputType="text"
                    android:textColor="#00175C"
                    android:textColorHint="#00175C"
                    android:textColorLink="#00175C"
                    android:textSize="16sp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    >
                    <requestFocus />
                </EditText>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TilNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/TilDniC"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/nom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"
                    android:hint="@string/nom_p"
                    android:inputType="text"
                    android:textColor="#00175C"
                    android:textColorHint="#00175C"
                    android:textColorLink="#00175C"
                    android:textSize="16sp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TilCognoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/TilNom"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <EditText
                    android:id="@+id/cognoms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cognoms_p"
                    android:inputType="text"
                    android:textColor="#00175C"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"
                    android:textColorHint="#00175C"
                    android:textColorLink="#00175C"
                    android:textSize="16sp" >
                </EditText>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TilEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/TilCognoms"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <EditText
                    android:id="@+id/empresa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/cognoms"
                    android:layout_below="@+id/cognoms"
                    android:ems="10"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"
                    android:hint="@string/empresa_c"
                    android:inputType="text"
                    android:textColor="#00175C"
                    android:textColorHint="#00175C"
                    android:textColorLink="#00175C"
                    android:textSize="16sp" >
                </EditText>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TilUsuari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TilEmpresa"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/usuari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"
                    android:hint="@string/usuari_c"
                    android:maxLength="12"
                    android:inputType="text"
                    android:textColor="#00175C"
                    android:textColorHint="#00175C"
                    android:textColorLink="#00175C"
                    android:textSize="16sp" >
                </EditText>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TilPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TilUsuari"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password_c"
                    android:inputType="textPassword"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"
                    android:maxLength="12"
                    android:textColor="#00175C"
                    android:textColorHint="#00175C"
                    android:textColorLink="#00175C"
                    android:textSize="16sp" >
                </EditText>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TilRePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TilPass"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/Rpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/repassword_c"
                    android:inputType="textPassword"
                    android:layout_marginLeft="80dp"
                    android:layout_marginStart="80dp"
                    android:textColor="#00175C"
                    android:maxLength="12"
                    android:textColorHint="#00175C"
                    android:textColorLink="#00175C"
                    android:textSize="16sp" >
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btAltaP"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/selector"
                android:drawablePadding="5dp"
                android:text="@string/bt_Alta"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/TilRePass"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <Button
                android:id="@+id/btCancelarP"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/selector"
                android:drawablePadding="0dp"
                android:text="Cancel·lar"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_alignTop="@+id/btAltaP"
                android:layout_toRightOf="@+id/btAltaP"
                android:layout_toEndOf="@+id/btAltaP" />



        </RelativeLayout>


    </LinearLayout>
</ScrollView>